Finish fixing padding/ margin/ spacing miss-aligns

--- a/src/assets/styles/cmps/ReDateRangePicker.css
+++ b/src/assets/styles/cmps/ReDateRangePicker.css
@@ -1,16 +1,20 @@
 .details-calendar {
     position: relative;
-    margin-bottom: 450px;
+    padding-block: 3rem;
+    margin-bottom: 300px;
+}
+
+.calendar-date span.light {
+    line-height: 1.8rem;
 }
 
 .details-calendar .date-container {
-    position: absolute;
-    left: 0%;
-    background: var(--white);
-    border-radius: 32px;
-    width: fit-content;
-    padding: 32px;
     box-sizing: border-box;
+    position: absolute;
+    /* left: -5%; */
+    background: var(--white);
+    width: fit-content;
+    padding-block: 1rem;
 }
 
 .date-container .rdp {
@@ -22,7 +26,7 @@
     flex-direction: row;
     gap: 40px;
     position: relative;
-    width: fit-content
+    width: fit-content;
 }
 
 .date-container .rdp-month {
@@ -42,8 +46,8 @@
 
 .date-container .rdp-button_previous,
 .date-container .rdp-button_next {
-    width: 32px;
-    height: 32px;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
     background: var(--white);
     cursor: pointer;
@@ -54,14 +58,11 @@
     padding: 0;
     margin: 0;
     transition: all 0.2s ease;
+    margin-inline: 8px 12px;
 }
 
-.date-container .rdp-button_previous {
-    /* margin-left: -8px; */
-}
-
-.date-container .rdp-button_next {
-    /* margin-right: -8px; */
+.date-container .rdp-month_caption {
+    margin-bottom: .5rem;
 }
 
 .date-container .rdp-button_previous:hover,
@@ -73,7 +74,7 @@
 .date-container .rdp-month_caption {
     display: flex;
     justify-content: center;
-    margin-bottom: 32px;
+    margin-bottom: 1rem;
     padding: 0;
 }
 
@@ -111,14 +112,14 @@
 
 .date-container .rdp-weekday::before {
     content: attr(aria-label);
-    /* position: absolute; */
+    position: absolute;
     left: 0;
-    right: 0;
+    right: 5px;
     text-align: center;
     color: var(--gray3);
     font-size: 12px;
+
     font-family: cereal-light;
-    content: attr(aria-label);
 }
 
 .date-container {
@@ -161,8 +162,8 @@
 }
 
 .date-container .rdp-day {
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     padding: 0;
     text-align: center;
     vertical-align: middle;
@@ -171,8 +172,8 @@
 
 .date-container .rdp-day_button {
     font-family: cereal-medium;
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     border-radius: 50%;
     border: none;
     background: transparent;
@@ -183,8 +184,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
-    margin: 0;
+    margin: 3px;
     transition: all 0.1s ease;
     position: relative;
 }
@@ -211,8 +211,6 @@
 }
 
 .date-container.rdp-day.rdp-selected .rdp-day_button {
-    /* .date-container .rdp-day.rdp-day_checkin .rdp-day_button,
-.date-container .rdp-day.rdp-day_checkout .rdp-day_button  */
     background: var(--gray3);
     color: var(--white);
     font-weight: 600;
